compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_self_doc_trailing_space.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..10,
        custom: (),
        node: Constant {
            value: Str(
                "x=",
            ),
            kind: None,
        },
    },
    Located {
        range: 0..10,
        custom: (),
        node: Constant {
            value: Str(
                "   ",
            ),
            kind: None,
        },
    },
    Located {
        range: 0..10,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 3..4,
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Load,
                },
            },
            conversion: 114,
            format_spec: None,
        },
    },
]
