compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_yield_expr.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..10,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 3..8,
                custom: (),
                node: Yield {
                    value: None,
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
