compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_string_concat.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..16,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..16,
                custom: (),
                node: Constant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                },
            },
        },
    },
]
