compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_string_triple_quotes_with_kind.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..20,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..20,
                custom: (),
                node: Constant {
                    value: Str(
                        "Hello, world!",
                    ),
                    kind: Some(
                        "u",
                    ),
                },
            },
        },
    },
]
