compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_u_string_concat_1.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..17,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..17,
                custom: (),
                node: Constant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                },
            },
        },
    },
]
