compiler/parser/src/snapshots/rustpython_parser__string__tests__raw_byte_literal_1.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..8,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..8,
                custom: (),
                node: Constant {
                    value: Bytes(
                        [
                            92,
                            120,
                            49,
                            122,
                        ],
                    ),
                    kind: None,
                },
            },
        },
    },
]
