compiler/parser/src/snapshots/rustpython_parser__string__tests__raw_byte_literal_2.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..6,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..6,
                custom: (),
                node: Constant {
                    value: Bytes(
                        [
                            92,
                            92,
                        ],
                    ),
                    kind: None,
                },
            },
        },
    },
]
