compiler/parser/src/snapshots/rustpython_parser__string__tests__raw_fstring.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..7,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..7,
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            range: 0..7,
                            custom: (),
                            node: FormattedValue {
                                value: Located {
                                    range: 4..5,
                                    custom: (),
                                    node: Name {
                                        id: "x",
                                        ctx: Load,
                                    },
                                },
                                conversion: 0,
                                format_spec: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
